[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/AlbumSpin1.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/pixel_wav_visual.png" type="Texture" id=2]
[ext_resource path="res://UI/Pixel GUI Buttons pack black platform.png" type="Texture" id=3]
[ext_resource path="res://World/AlbumPickUp1.gd" type="Script" id=4]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 96, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 96, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 96, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 96, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=13]
size = 10
font_data = ExtResource( 5 )

[node name="AlbumPickUp1" type="Node2D"]
script = ExtResource( 4 )

[node name="AlbumSpin1" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.35, 0.35 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Popup" type="Popup" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="Sprite" type="Sprite" parent="Popup"]
texture = ExtResource( 3 )

[node name="Blackdrop" type="Panel" parent="Popup/Sprite"]
visible = false
margin_left = -24.0
margin_top = -10.0
margin_right = 24.0
margin_bottom = 2.0

[node name="RichTextLabel" type="RichTextLabel" parent="Popup/Sprite"]
margin_left = -25.0
margin_top = -11.0
margin_right = 75.0
margin_bottom = 13.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]New Music Found!"
text = "New Music Found!"

[node name="AlbumSpin1" parent="Popup/Sprite" instance=ExtResource( 1 )]
visible = false
position = Vector2( -17, -4 )
scale = Vector2( 0.36, 0.36 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Popup"]
position = Vector2( -0.5, -1 )
scale = Vector2( 0.46875, 0.15 )
frames = SubResource( 7 )
frame = 1
playing = true

[node name="RichTextLabel" type="RichTextLabel" parent="Popup"]
visible = false
margin_left = -9.0
margin_top = -11.0
margin_right = 143.0
margin_bottom = 53.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]You found the track 'Cyberdyne' by Rozanzu. Play it from your tuneStick anytime."
text = "You found the track 'Cyberdyne' by Rozanzu. Play it from your tuneStick anytime."

[node name="PopTimer1" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="StopTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="PopTimer1" to="." method="_on_PopTimer1_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
